--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 15px;
+            text-align: justify;
         }
 
         section {
