--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,14 @@
             text-align: justify;
         }
 
+        .container1 {
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 15px;
+            text-align: center;
+        }
+
         section {
             padding: 80px 0;
         }
