--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,13 @@
             text-align: center;
         }
 
+        .container2 {
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 15px;
+        }
+
         section {
             padding: 80px 0;
         }
